deploy/2-deployment.yaml
apiVersion: apps/v1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
          - containerPort: 8080
          - containerPort: 50000
        volumeMounts:
          - name: jenkins-volume
            mountPath: /var/jenkins_home
      #serviceAccountName: "my-svc-account"
      volumes:
      - name: jenkins-volume
        persistentVolumeClaim:
          claimName: jenkins-volume-claim
