deploy/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: deploy
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: jnlp
    port: 50000
    targetPort: 50000
    protocol: TCP
